# PQM-V3

./: .gitignore  package.json
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: handlers.rs  main.rs  state.rs
src-tauri/src/controllers/: graph_controller.rs  mod.rs  structure_controller.rs
src-tauri/src/dto/: api.rs  api_defaults.rs  api_error.rs  curve_dto.rs  mod.rs  spline_dto.rs  structure_dto.rs  structure_table_dto.rs
src-tauri/src/dto/input/: axis_properties.rs  graph_properties.rs  mod.rs  structure_properties.rs
src-tauri/src/dto/response/: curve.rs  graph_response.rs  mod.rs  structure_response.rs
src-tauri/src/errors/: graph_not_found.rs  mod.rs
src-tauri/src/models/: graph.rs  mod.rs  spline.rs  structure.rs
src-tauri/src/models/core/: graph.rs  mod.rs  spline.rs  structure.rs
src-tauri/src/models/styles/: axis_display_properties.rs  graph_display_properties.rs  graph_style.rs  mod.rs  structure-style.rs  structure_display_properties.rs
src-tauri/src/services/: csv_service.rs  graph_service.rs  mod.rs  spline_service.rs  structure_service.rs
src-tauri/src/services/implementations/: csv_service_impl.rs  mod.rs
src-tauri/src/transformers/: graph_transformer.rs  mod.rs  path_buf_transformer.rs  structure_transformer.rs
src-tauri/src/utils/: asserts.rs  math.rs  mod.rs
src/app/: page.tsx
src/app/lib/: exportTableButton.tsx  graph.tsx  graphTable.tsx  selectFiles.tsx  selectFolder.tsx
src/app/types/: api.ts  graphContext.ts  graphDisplayProperties.ts  graphStyle.ts  graphics.tsx  structureDisplayProperties.ts
(+10 files in other folders)
